# scapyWorkspace

./: .gitignore  .gitmodules  pyproject.toml
src/workspace/: __main__.py  opcua_binary_chunk_flood.py  opcua_binary_diagnostic.py  opcua_binary_endpoints.py  opcua_binary_randread.py  opcua_binary_session_example.py  opcua_binary_simple_decode.py  opcua_binary_subscription_request.py  opcua_binary_testing.py  opcua_binary_unlimited_monitored_items.py  testing_client_hello.py
src/workspace/browse/: cve24375.py
src/workspace/diagnostics/: dotnetstd.py  nodejs_opcua.py  open62541.py  python_opcua.py
src/workspace/randRead/: randRead.py
tests/: test_parse_opcua_binary_diagnostic.py
