[project]
name = "workspace"
version = "0.1.0"
description = "Development environment for testing scapy integration with OPC UA"
authors = [
    {name = "Frozenbitz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "scapy @ file:///home/las3/peter/scapyWorkspace/src/scapy",
    "cryptography (>=45.0.6,<46.0.0)",
    "pyx (>=0.16,<0.17)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "ipython (>=9.4.0,<10.0.0)"
]

[project.scripts]
workspace = "workspace.__main__:main"
opcua_diag = "workspace.opcua_binary_diagnostic:main"
opcua_read = "workspace.opcua_binary_randread:main"
opcua_endpoint = "workspace.opcua_binary_endpoints:main"
opcua_decode = "workspace.opcua_binary_simple_decode:main"
opcua_flood = "workspace.opcua_binary_chunk_flood:main"
opcua_test = "workspace.opcua_binary_testing:main"
opcua_session = "workspace.opcua_binary_session_example:main"
opcua_subrequest = "workspace.opcua_binary_subscription_request:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-dir]
workspace = 'src/workspace'
scapy = 'src/scapy'

[tool.poetry.dependencies]
scapy = {path = "src/scapy",develop = true}
